# diffusion_practice_with_mnist

./: README.md  pyproject.toml  train.ipynb  train.py
