[project]
name = "Diffusion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dolen", email = "87627379+HiDolen@users.noreply.github.com"},
]
dependencies = [
    "torch>=2.5.1",
    "lightning>=2.4.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tqdm>=4.66.6",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "diffusers>=0.31.0",
    "matplotlib>=3.9.2",
    "pdm>=2.20.1",
    "pytorch-lightning-quick-start-utils @ git+https://github.com/HiDolen/pytorch_lightning_quick_start_utils@v0.2.0",
    "einops>=0.8.0",
    "torchvision>=0.20.1",
]
requires-python = ">=3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 100

[tool.pdm]
distribution = false
